--- a/src/Stars.csproj
+++ b/src/Stars.csproj
@@ -7,8 +7,9 @@
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+    <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" />
+    <ProjectReference Include="../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj"/>
   </ItemGroup>
 </Project>
