Routing as a Service

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
 
         {
-            "name": ".NET Core Launch (console)",
+            "name": "Launch blank",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -43,7 +43,6 @@
             "args": [
                 "-v",
                 "list",
-                "--input",
                 "https://cbers-stac-0-7.s3.amazonaws.com/CBERS4/MUX/027/catalog.json",
                 "-r",
                 "4"
@@ -63,10 +62,9 @@
             "args": [
                 "-v",
                 "list",
-                "--input",
-                "https://cbers-stac-0-7.s3.amazonaws.com/CBERS4/MUX/027/069/catalog.json",
                 "-r",
-                "4"
+                "4",
+                "https://cbers-stac-0-7.s3.amazonaws.com/CBERS4/MUX/027/069/catalog.json"
             ],
             "cwd": "${workspaceFolder}/src",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
@@ -83,7 +81,6 @@
             "args": [
                 "-v",
                 "list",
-                "--input",
                 "https://catalog.terradue.com/sentinel2/search?uid=S2A_MSIL1C_20190119T074231_N0207_R092_T39TVH_20190119T091330",
                 "-r",
                 "4"
@@ -103,11 +100,8 @@
             "args": [
                 "-v",
                 "list",
-                "--input",
                 "https://formentera.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200624T090133_20200624T090433_20200624T105644_0180_040_221_2700_LN2_O_NR_004",
-                "--input",
                 "https://formentera.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200623T092744_20200623T093044_20200624T153106_0180_040_207_2700_LN2_O_NT_004",
-                "--input",
                 "https://formentera.terradue.com/sentinel3/search?format=atom&start=2020-03-06&bbox=-5.801%2C14.009%2C-3.076%2C16.215&pt=SL_2_LST___&od=DESCENDING",
                 "-r",
                 "4"
@@ -127,7 +121,6 @@
             "args": [
                 "-v",
                 "list",
-                "--input",
                 "https://formentera.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200623T092744_20200623T093044_20200624T153106_0180_040_207_2700_LN2_O_NT_004",
                 "-r",
                 "2"
@@ -147,7 +140,6 @@
             "args": [
                 "-v",
                 "list",
-                "--input",
                 "https://earth-search.aws.element84.com/v0/collections/sentinel-s2-l2a-cogs/items/S2A_30VWN_20200830_0_L2A",
                 "-r",
                 "2"
@@ -158,6 +150,26 @@
             "stopAtEntry": false
         },
         {
+            "name": "List Astrae Earth Catalog",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.dll",
+            "args": [
+                "-v",
+                "list",
+                "https://eod-catalog-svc-prod.astraea.earth",
+                "-r",
+                "2"
+            ],
+            "cwd": "${workspaceFolder}/src",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        
+        {
             "name": "Copy STAC CBERS4/MUX/027/069",
             "type": "coreclr",
             "request": "launch",
@@ -167,7 +179,6 @@
             "args": [
                 "-v",
                 "copy",
-                "--input",
                 "https://cbers-stac-0-7.s3.amazonaws.com/CBERS4/MUX/027/069/catalog.json",
                 "-r",
                 "4",
@@ -189,11 +200,8 @@
             "args": [
                 "-v",
                 "copy",
-                "--input",
                 "https://formentera.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200624T090133_20200624T090433_20200624T105644_0180_040_221_2700_LN2_O_NR_004",
-                "--input",
                 "https://formentera.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200623T092744_20200623T093044_20200624T153106_0180_040_207_2700_LN2_O_NT_004",
-                "--input",
                 "https://formentera.terradue.com/sentinel3/search?format=atom&start=2020-03-06&bbox=-5.801%2C14.009%2C-3.076%2C16.215&pt=SL_2_LST___&od=DESCENDING",
                 "-r",
                 "4",
@@ -218,8 +226,7 @@
             "args": [
                 "-v",
                 "copy",
-                "--input",
-                "https://catalog.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200623T092744_20200623T093044_20200624T153106_0180_040_207_2700_LN2_O_NT_004",
+                "https://catalog.terradue.com/sentinel1/search?format=atom&uid=S1B_IW_SLC__1SDV_20180209T182240_20180209T182307_009550_011325_45C5",
                 "-r",
                 "4",
                 "--output",
