--- a/src/Stars.Console/appsettings.yml
+++ b/src/Stars.Console/appsettings.yml
@@ -1,11 +1,15 @@
 Suppliers:
   Onda:
-    Type: Terradue.Data.Suppliers.DataHubSourceSupplier, Terradue.Data.Suppliers
+    Type: Terradue.Data.Stac.Suppliers.DataHubSourceSupplier, Terradue.Data.Stac
     Parameters: [""]
     ServiceUrl: "https://catalogue.onda-dias.eu/dias-catalogue"
     Credentials:
       Username: test
       Password: secret
+Translators:
+  Onda:
+    Type: Terradue.Data.Stac.Translators.AtomGeoTimeTranslator, Terradue.Data.Stac
+    Parameters: [""]
 Carriers:
   WebDownload:
     NetworkCredentials:
