command parsing exception catch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,21 @@
             "stopAtEntry": false
         },
         {
+            "name": "Arguments Parsing Error",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.dll",
+            "args": [
+                "--yoda"
+            ],
+            "cwd": "${workspaceFolder}/src",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": "Display Help",
             "type": "coreclr",
             "request": "launch",
@@ -140,6 +155,7 @@
             "args": [
                 "-v",
                 "list",
+                "-i",
                 "https://earth-search.aws.element84.com/v0/collections/sentinel-s2-l2a-cogs/items/S2A_30VWN_20200830_0_L2A",
                 "-r",
                 "2"
