--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -242,11 +242,12 @@
             "args": [
                 "-v",
                 "copy",
-                "https://catalog.terradue.com/sentinel1/search?format=atom&uid=S1B_IW_SLC__1SDV_20180209T182240_20180209T182307_009550_011325_45C5",
+                "https://catalog.terradue.com/sentinel3/search?format=atom&uid=S3B_SR_2_LAN____20190404T224853_20190404T233910_20190430T202207_3016_024_015______LN3_O_NT_003",
                 "-r",
                 "4",
                 "--output_dir",
-                "/tmp/stars"
+                "/tmp/stars",
+                "--allow-ordering"
             ],
             "cwd": "${workspaceFolder}/src",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
