--- a/src/Stars.Service/Stars.Service.csproj
+++ b/src/Stars.Service/Stars.Service.csproj
@@ -5,7 +5,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8"/>
-    <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
+    <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
+    <PackageReference Include="SharpZipLib" Version="1.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stars.Interface\Stars.Interface.csproj"/>
