--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,11 +54,11 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.dll",
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.Console",
             "args": [
                 "-v",
                 "list",
-                "https://cbers-stac-0-7.s3.amazonaws.com/CBERS4/MUX/027/catalog.json",
+                "https://cbers-stac-1-0.s3.amazonaws.com/CBERS4/MUX/027/catalog.json",
                 "-r",
                 "4"
             ],
@@ -132,7 +132,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.dll",
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.Console",
             "args": [
                 "-v",
                 "list",
@@ -238,7 +238,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.dll",
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.0/Stars.Console",
             "args": [
                 "-v",
                 "copy",
