--- a/src/Stars.Service/Terradue.Stars.Service.csproj
+++ b/src/Stars.Service/Terradue.Stars.Service.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="DotNetStac" Version="0.4.0"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Stars.Interface\Terradue.Stars.Interface.csproj"/>
+    <ProjectReference PrivateAssets="All" Include="..\Stars.Interface\Terradue.Stars.Interface.csproj" />
   </ItemGroup>
+  <Import Project="WalkEachTargetPerProject.targets" />
 </Project>
