--- a/src/Stars.Console/Terradue.Stars.Console.csproj
+++ b/src/Stars.Console/Terradue.Stars.Console.csproj
@@ -2,29 +2,63 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>Stars.Console</AssemblyName>
+    <Version>0.1.0</Version>
+    <AssemblyName>Stars</AssemblyName>
     <UserSecretsId>f195eead-6dad-49d2-ad76-d9dbf6662371</UserSecretsId>
+    <RuntimeIdentifiers>win7-x64;win10-x64;osx-x64;linux-x64;debian.8-x64;debian.9-x64;ubuntu.19.04-x64;ubuntu.18.04-x64;ubuntu.16.04-x64;ubuntu.14.04-x64;opensuse.42.3-x64;ol.7-x64;rhel-x64;fedora.27-x64;fedora.28-x64;centos.7-x64</RuntimeIdentifiers>
+    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <NoWarn>NU1603</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="appsettings.yml" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always"/>
+    <Content Include="appsettings.yml" CopyToOutputDirectory="Always" CopyToPublishDirectory="PreserveNewest">
+      <LinuxPath>/etc/stars/appsettings.yml</LinuxPath>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8"/>
-    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.0.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.NewtonsoftJson" Version="3.1.8"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.8"/>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.8"/>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.8"/>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8"/>
-    <PackageReference Include="ShellProgressBar" Version="5.0.0"/>
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" />
+    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.NewtonsoftJson" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
+    <PackageReference Include="ShellProgressBar" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Stars.Interface\Terradue.Stars.Interface.csproj"/>
-    <ProjectReference Include="..\Stars.Services\Terradue.Stars.Services.csproj"/>
+    <ProjectReference Include="..\Stars.Interface\Terradue.Stars.Interface.csproj" />
+    <ProjectReference Include="..\Stars.Services\Terradue.Stars.Services.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <!-- Create a couple of folders we may user -->
+    <LinuxFolder Include="/etc/stars" RemoveOnUninstall="true" />
   </ItemGroup>
+  <!-- Fedora, CentOS, and RHEL dependencies -->
+  <ItemGroup Condition="$(RuntimeIdentifier.StartsWith('rhel')) OR $(RuntimeIdentifier.StartsWith('fedora')) OR $(RuntimeIdentifier.StartsWith('ol'))">
+    <RpmDotNetDependency Include="libstdc++" Version="" />
+    <RpmDotNetDependency Include="libunwind" Version="" />
+    <RpmDotNetDependency Include="libicu" Version="" />
+  </ItemGroup>
+  <ItemGroup Condition="$(RuntimeIdentifier.StartsWith('rhel')) OR $(RuntimeIdentifier.StartsWith('fedora'))">
+    <RpmDotNetDependency Include="compat-openssl10" Version="" />
+  </ItemGroup>
+  <ItemGroup Condition="$(RuntimeIdentifier.StartsWith('ol'))">
+    <RpmDotNetDependency Include="openssl-libs" Version="" />
+  </ItemGroup>
+  <ItemGroup Condition="$(RuntimeIdentifier.StartsWith('centos'))">
+    <!-- <RpmDependency Include="lttng-ust" Version=""/> -->
+    <RpmDotNetDependency Include="libcurl" Version="" />
+    <RpmDotNetDependency Include="openssl-libs" Version="" />
+    <RpmDotNetDependency Include="krb5-libs" Version="" />
+    <RpmDotNetDependency Include="libicu" Version="" />
+    <RpmDotNetDependency Include="zlib" Version="" />
+    <RpmDotNetDependency Include="libunwind" Version="" Condition="'$(TargetFramework)'=='netcoreapp2.0'" />
+    <RpmDotNetDependency Include="libuuid" Version="" Condition="'$(TargetFramework)'=='netcoreapp2.0'" />
+  </ItemGroup>
+
+  <Target Name="PackageZip" DependsOnTargets="CreateZip" Outputs="$(ZipPath)" />
+  <Target Name="PackageTarball" DependsOnTargets="CreateTarball" Outputs="$(TarballPath)"/>
+  <Target Name="PackageDebian" DependsOnTargets="CreateDeb" Outputs="$(DebPath)"/>
+  <Target Name="PackageRpm" DependsOnTargets="CreateRpm" Outputs="$(RpmPath)" />
 </Project>
