--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -246,7 +246,7 @@
                 "-r",
                 "4",
                 "--output-dir",
-                "/tmp",
+                "/home/emathot/Downloads/",
                 "--allow-ordering"
             ],
            "cwd": "${workspaceFolder}/src",
