Store Service to support proper storage

--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -23,7 +23,7 @@
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
     <PackageReference Include="SharpZipLib" Version="1.2.0"/>
-    <PackageReference Include="DotNetStac" Version="0.4.9"/>
+    <!-- <PackageReference Include="DotNetStac" Version="0.4.9"/> -->
     <PackageReference Include="Html2Markdown" Version="3.3.1.407"/>
     <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7"/>
     <PackageReference Include="System.IO.FileSystem.AccessControl" Version="4.7.0"/>
@@ -37,6 +37,7 @@
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
       <IncludeAssets>Terradue.Stars.Geometry.dll</IncludeAssets>
     </ProjectReference>
+    <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
