--- a/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
+++ b/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="GeoJSON.Net" Version="1.2.19"/>
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
-    <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
+    <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
+    <PackageReference Include="SharpKml.Core" Version="5.1.3"/>
   </ItemGroup>
 </Project>
