--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -22,11 +22,12 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9"/>
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
-    <PackageReference Include="SharpZipLib" Version="1.2.0"/>
     <PackageReference Include="DotNetStac" Version="0.5.4"/>
     <PackageReference Include="Html2Markdown" Version="3.3.1.407"/>
     <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7"/>
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0"/>
+    <PackageReference Include="MimeTypes" Version="2.0.2"/>
+    <PackageReference Include="DotNetZip" Version="1.15.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../Stars.Interface/Terradue.Stars.Interface.csproj">
@@ -37,7 +38,6 @@
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
       <IncludeAssets>Terradue.Stars.Geometry.dll</IncludeAssets>
     </ProjectReference>
-    <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
